--- a/cp/ppg/ppg.tex
+++ b/cp/ppg/ppg.tex
@@ -181,8 +181,6 @@ placing it so that all elements less than it are before and all
 those greater than it are after. Then calling this function on the sub-arrays
 after and before the chosen element.
 //TODO pseudo code
-\subsection*{Quick Sort}
-TODO pseudo code
 \subsection*{The Others}
 \begin{enumerate}
     \item \algodis{Selection Sort}
@@ -210,7 +208,7 @@ TODO pseudo code
     % {}{}{}
 \end{enumerate}
 \chapter{Week 2}
-TODO move notes over from the other notebook.
+See the other notes.pdf
 \chapter{Week 3}
 \section{Complete Search}
 \subsection*{Subset Processing}
